[gd_scene load_steps=12 format=3 uid="uid://bya814s12oehq"]

[ext_resource type="Script" uid="uid://dwbmnyoxgqocq" path="res://scripts/pause.gd" id="1_m0klm"]
[ext_resource type="Shader" uid="uid://cusohk5u0rcg3" path="res://shaders/pause.gdshader" id="1_r8yp4"]
[ext_resource type="FontFile" uid="uid://b3e5yxxru3oif" path="res://font/FartBubble-1De.ttf" id="3_m0klm"]
[ext_resource type="PackedScene" uid="uid://bu55w2k50pmp1" path="res://scenes/options menu/options_menu.tscn" id="4_aicil"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m0klm"]
shader = ExtResource("1_r8yp4")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0klm"]
bg_color = Color(0.35686275, 0.3372549, 0.972549, 0.23529412)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 0)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aicil"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0.043868788, 0.6985429, 0.23529412)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m0klm"]

[sub_resource type="Animation" id="Animation_aicil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m0klm"]
resource_name = "pause_blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn4bt"]
_data = {
&"RESET": SubResource("Animation_aicil"),
&"pause_blur": SubResource("Animation_m0klm")
}

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0klm")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_m0klm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -215.0
offset_right = 299.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m0klm")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_m0klm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aicil")
theme_override_styles/hover = SubResource("StyleBoxFlat_aicil")
theme_override_styles/disabled = SubResource("StyleBoxFlat_aicil")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m0klm")
text = "Resume"

[node name="Reset" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m0klm")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_m0klm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aicil")
theme_override_styles/hover = SubResource("StyleBoxFlat_aicil")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m0klm")
text = "Reset"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m0klm")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_m0klm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aicil")
theme_override_styles/hover = SubResource("StyleBoxFlat_aicil")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m0klm")
text = "Options"

[node name="Quit_Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_m0klm")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_m0klm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aicil")
theme_override_styles/hover = SubResource("StyleBoxFlat_aicil")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m0klm")
text = "Quit Game"

[node name="Options_Menu" parent="." instance=ExtResource("4_aicil")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jn4bt")
}

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Reset" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Game" to="." method="_on_button_3_pressed"]
